2008-04-22  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        - throw proper exceptions for objects that don't implement call or construct
        
        This fixes 21 more JSC test regressions. It is also seemingly an
        0.5% progression.

        * VM/ExceptionHelpers.cpp:
        (KJS::createNotAnObjectError):
        (KJS::createNotAConstructorError):
        (KJS::createNotAFunctionError):
        * VM/ExceptionHelpers.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):

2008-04-21  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff.

        Implement emitCode for ConstDeclNode.

        This fixes the crash (assertion) in js1_5/Scope/scope-001.js

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::registerForLocalConstInit):
        * VM/CodeGenerator.h:
        * kjs/nodes.cpp:
        (KJS::AssignResolveNode::emitCode):
        (KJS::ConstDeclNode::emitCodeSingle):
        (KJS::ConstDeclNode::emitCode):
        (KJS::ConstStatementNode::emitCode):
        * kjs/nodes.h:

2008-04-21  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Sam.
        
        - add some support for the split window object

        This fixes many layout tests.
        
        * VM/Machine.cpp:
        (KJS::resolveBaseAndFunc): Use toThisObject() to ensure we get the
        wrapper global, if one exists, as the "this" object.
        * kjs/function.cpp:
        (KJS::globalFuncEval): Use toGlobalObject() to handle the wrapper
        case properly.

2008-04-21  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        - restore ScopeChain::operator= to avoid crash on many layout tests
        
        Otherwise, FunctionImp::setScope would cause a reference
        underflow. I implemented using the copy construct and swap idiom.

        * kjs/scope_chain.h:
        (KJS::ScopeChain::swap):
        (KJS::ScopeChain::operator=):

2008-04-21  Oliver Hunt  <oliver@apple.com>
